# amethyst-extra

./: .gitignore  Cargo.toml  README.md
src/: asset_loader.rs  auth.rs  auto_save.rs  auto_text.rs  discord.rs  follow_mouse.rs  lib.rs  noclip.rs  relative_timer.rs  terminal.rs  time_control.rs  time_driver.rs  ui_timer.rs
src/movement/: ground.rs  ground_friction.rs  jump.rs  mod.rs  movement.rs  rotation.rs  upright.rs  utils.rs
