[package]
name = "amethyst-extra"
version = "0.4.0"
authors = ["jojolepro <jojolepromain@gmail.com>"]
description = "Various helpful components, structs, systems and resources for the Amethyst engine."
categories = ["game-engines"]
keywords = ["amethyst", "extra", "utils", "controllers", "fps"]
documentation = "https://docs.rs/amethyst-extra"
repository = "https://github.com/jojolepro/amethyst-extra"
license = "Apache-2.0"
edition = "2018"
exclude = ["doc"]

[dependencies]
amethyst = { version = "0.12", features = ["vulkan", "nightly"] }
crossbeam-channel = "0.3.1"
discord-rpc-client = "0.2.3"
partial_function = "0.4.0"
serde = { version = "1.0", features = ["serde_derive"] }
serde_derive = "1.0"
serde_json = "1.0"
ron = "0.2"
log = "0.4"
dirty = "0.2"
fern = { version = "0.5", features = ["colored"] }
crossterm = "0.4.2"
rand = "0.5.5"
lazy_static = "1.1.0"
derive-new = "0.5"
roman = "0.1.6"
#specs-derive = { git = "https://github.com/slide-rs/specs" }
#amethyst-rhusics = "0.3"

#nphysics3d = "0.9.4"

#ncollide3d = "0.17.3"

#nphysics-ecs-dumb = { git = "https://github.com/jojolepro/nphysics-ecs-dumb", branch = "changes" }
#nphysics-ecs-dumb = { git = "https://github.com/jojolepro/nphysics-ecs-dumb", branch = "collisionperf" }
#specs-physics = { git = "https://github.com/jojolepro/specs-physics", branch = "hoppinworld" }
specs-physics = { path = "../specs-physics", branch = "hoppinworld" }

hyper = "0.12.11"
hyper-tls = "0.3.1"

tokio = "0.1.7"
tokio-executor = "0.1.0"

#amethyst = { git = "https://github.com/jojolepro/amethyst", branch="master" }
#amethyst = { git = "https://github.com/jojolepro/amethyst", branch="activecamera", features = ["nightly"] }
#amethyst-rhusics = { git = "https://github.com/amethyst/amethyst-rhusics" }
