[package]
name = "amethyst-extra"
version = "0.4.0"
authors = ["jojolepro <jojolepromain@gmail.com>"]
description = "Various helpful components, structs, systems and resources for the Amethyst engine."
categories = ["game-engines"]
keywords = ["amethyst", "extra", "utils", "controllers", "fps"]
documentation = "https://docs.rs/amethyst-extra"
repository = "https://github.com/jojolepro/amethyst-extra"
license = "Apache-2.0"
edition = "2018"
exclude = ["doc"]

[features]
default = ["discord"]
discord = ["discord-rpc-client"]

[dependencies]
#amethyst = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld", features = ["gltf", "animation", "vulkan", "nightly"] }
amethyst = { git = "https://github.com/amethyst/amethyst", branch = "master", features = ["gltf", "animation", "vulkan"] }
#specs-physics = { git = "https://github.com/jojolepro/specs-physics", branch = "0.4.0", features = ["amethyst", "dim3"] }
specs-physics = { git = "https://github.com/amethyst/specs-physics", branch = "master", features = ["amethyst"] }
crossbeam-channel = "0.3.1"
discord-rpc-client = { version = "0.3.0", optional = true }
partial_function = "0.4.0"
serde = { version = "1.0", features = ["serde_derive"] }
serde_derive = "1.0"
serde_json = "1.0"
ron = "0.2"
log = "0.4"
dirty = "0.2"
fern = { version = "0.5", features = ["colored"] }
crossterm = "0.4.2"
rand = "0.5.5"
lazy_static = "1.1.0"
derive-new = "0.5"
#roman = "0.1.6"
hyper = "0.12.11"
hyper-tls = "0.3.1"
tokio = "0.1.7"
tokio-executor = "0.1.0"

